2001-12-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/*.shp, Makefile.*, flx.in: removed text button shapes
	* gumps/Enabled_button.*: Text button for picking enabled/disabled
	* AudioOptions_gump.cc, VideoOptions_gump.cc, GameplayOptions_gump.cc, Newfile_gump.cc: use Text_button instead of text button shapes.
	* VideoOptions_gump.cc: added support for custom resolutions
	* GameplayOptions_gump.cc: added support for custom framerates	
	* Gump_ToggleTextButton.h: minor bug fix
	* Makefile.am: removed --all-static from link line

2001-12-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/u7shp.c: use new and improved palette in gimp plugin

2001-12-21  Max Horn  <max@quendi.de>

	* Makefile.am: fixed subdirs order to allow building from scratch

	* config.h.in, configure.in, conf/Configuration.cc: only use sstream on systems
	where this header is actually present

	* files/zip/unzip.c: fixed compiler warnings (ambigious 'else' statments)

	* configure.in: fixed output at end of configure run to do what it is
	supposed to (e.g. print out the SDL version instead of "sdl-config --version").

2001-12-21  Ryan Nunn  <triforce@merlin.net.au>
	* combat.cc, drag.cc, conf/Configuration.* : Warnings and errors
	* audio/Audio.cc, msvcstuff/msvc_kludges.h : Added a config file option
	  for Windows "config/audio/force_waveout" that when set to "yes" will
	  force SDL to use waveout rather than attepting to use DirectSound.
	  Using this option may fix up problems some people have with sound in
	  Exult under Windows. Also now allow Win32 to be build with 44kHz
	  sound by defining FORCE_44KHZ when building. It should probably be
	  made into a config option.

2001-12-21  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc (Weather_effect): Turn off rain in gump mode.
	* objs/egg.cc: Another goof in is_active().

2001-12-20  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Egg_object): Fixed excessive monster spawning from